2004-11-03 Scott Dattalo <scott@dattalo.com>
	* cli/parse.yy, cli/scan.ll, src/14bit-registers.cc, src/16bit-instructions.cc,
	src/16bit-registers.cc, src/breakpoints.cc, src/breakpoints.h, src/expr.cc,
	src/expr.h, src/icd.cc, src/modules.cc, src/operator.cc, src/operator.h,
	src/p16x7x.cc, src/pic-instructions.cc, src/pic-instructions.h, 
	src/pic-registers.cc, src/registers.cc, src/symbol.cc, src/symbol.h,
	src/value.cc, src/value.h:
	Added command line assignments. Now you can write stuff like:
	  temp1 = temp2 << 4
	where temp1 and temp2 are two registers.

2004-11-02 Scott Dattalo <scott@dattalo.com>
	* src/attribute.cc, src/attribute.h, src/modules.cc, src/modules.h:
	cleaned up include dependencies.

2004-11-02 Scott Dattalo <scott@dattalo.com>
	* src/gpsim_time.cc, src/gpsim_time.h: Fixed a bug with clearing
	cycle counter break points.
	
2004-11-01 Scott Dattalo <scott@dattalo.com>
	* src/gpsim_time.cc, src/gpsim_time.h, src/breakpoints.cc, src/ioports.h, 
	src/ioports.cc, src/stimuli.cc, src/tmr0.cc: Interrupts, tmr0 and
	I/O pins were all broken in some way.
	* regression/interrupts_14bit.asm, regression/interrupts_14bit.stc:
	Added regression test for the midrange devices

2004-10-29 Scott Dattalo <scott@dattalo.com>
	* src/gpsim_time.cc, src/gpsim_time.h: Cycle counter debugging.
	
2004-10-20 Scott Dattalo <scott@dattalo.com>
	* src/16bit-instructions.cc: Fixed bug in DECF instruction.
	* regression/instructions_16bit/instructions_16bit.asm: Added
	decf instruction to the regression test.
	
2004-10-20 Scott Dattalo <scott@dattalo.com>
	* src/ioports.cc, src/ioports.h, src/stimuli.cc, src/stimuli.h:
	PORTB pullups updated. 
	Added an overloaded update() member to Stimulus_Node that doesn't
	require time as an input (we never used it anyway).
	
2004-10-19 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.h, src/stimuli.cc, src/ioports.cc, src/i2c-ee.cc:
	Optimized I/O port stimulus updates.

2004-10-19 Scott Dattalo <scott@dattalo.com>