@@ -9,14 +9,14 @@ if [ $# -lt 2 ] ; then
 fi
 
 [ -f lt-gpsim.core ] && rm lt-gpsim.core
-#GPSIM=g
+
 GPSIM=../../gpsim/gpsim
-#GPSIM_SCRIPT=$1
+
 LOGFILE=$2
 touch $2
-#echo "Test $1" >> $LOGFILE
+
 $GPSIM --cli -c $1 >test.out
-grep "failures" test.out | grep "= 0 ="
+grep "failures" test.out | grep "= 0x0 ="
 if [ $? -eq 0 ] ; then
   echo "PASSED" >> $LOGFILE
 else
