@@ -26,10 +26,89 @@ Boston, MA 02111-1307, USA.  */
 #include "processor.h"
 
 #include "value.h"
+#include "errors.h"
+#include "operator.h"
+
+//------------------------------------------------------------------------
+Value::Value()
+{
+  constant = false;
+}
+
+Value::~Value()
+{
+}
+
+Value::Value(bool isConstant)
+{
+  constant = isConstant;
+}
+
+int Value::getAsInt()
+{
+  throw new Error(showType() +
+		  " cannot be converted to an integer ");
+}
+
+double Value::getAsDouble()
+{
+  throw new Error(showType() +
+		  " cannot be converted to a double ");
+}
+
+bool Value::isConstant()
+{
+  return constant;
+}
+
+bool Value::compare(ComparisonOperator *compOp, Value *rvalue)
+{
+  throw new Error(compOp->showOp() + 
+		  " comparison is not defined for " + showType());
+}
+
+
+/*
+bool Value::operator<(Value *rv)
+{
+  throw Error("OpLT");
+}
+bool Value::operator>(Value *rv)
+{
+  throw Error("OpGT");
+}
+bool Value::operator<=(Value *rv)
+{
+  throw Error("OpLE");
+}
+bool Value::operator>=(Value *rv)
+{
+  throw Error("OpGE");
+}
+bool Value::operator==(Value *rv)
+{
+  throw Error("OpEQ");
+}
+bool Value::operator!=(Value *rv)
+{
+  throw Error("OpNE");
+}
+bool Value::operator&&(Value *rv)
+{
+  throw Error("Op&&");
+}
+bool Value::operator||(Value *rv)
+{
+  throw Error("Op||");
+}
+*/
+
+//------------------------------------------------------------------------
+// gpsimValue
 
 gpsimValue::gpsimValue(void)
+  : cpu(0)
 {
-  cpu = 0;
 }
 
 gpsimValue::gpsimValue(Module *_cpu)
